add entities property, booking, payment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.show-sql=true
 
 #Format SQL output
 spring.jpa.properties.hibernate.format_sql=true
+
+# Enable debug logs for Spring Security
+logging.level.org.springframework.security=DEBUG
